ajustes no trabalhoInd. 1

--- a/ProjetoInd._1/index.html
+++ b/ProjetoInd._1/index.html
@@ -11,14 +11,22 @@ Aplique estilo na página do exercício da Aula 01 utilizando CSS. Faça uma bar
     </head>
     <body>
         <div class="nav-bar">
-            <b>Nav - bar</b>
-            <ul class="nav-bar">
-                <li><a class="active-bar" href="main.html">Home</a></li>
-                <li><a class="nav-bar" href="content.asp">Conteúdo</a></li>
-                <li><a class="nav-bar" href="news.html">Notícias</a></li>
-                <li><a class="nav-bar" href="contact.html">Contato</a></li>
-            </ul>
+            <div class="nav-bar_top">
+                <a class="active-nav-bar_link" href="index.html">Home</a>
+                <a class="nav-bar_link" href="content.html">Conteúdo</a>
+                <a class="nav-bar_link" href="news.html">Notícias</a>
+                <a class="nav-bar_link" href="contact.html">Contato</a>
+            </div>
+            
+            <div class="nav-bar_bottom">
+                <a class="nav-bar_link" href="contact.html">Contato</a>
+            </div>
         </div>
+
+        <div class="header">
+            
+        </div>
+
         <div class="page_center-band">
             <div>
                 <iframe width="100%" height="526" src="https://www.youtube.com/embed/sH1iUuETTtM" title="Star Wars Episódio IX: A Ascensão Skywalker - Texto de Abertura" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -91,5 +99,9 @@ Aplique estilo na página do exercício da Aula 01 utilizando CSS. Faça uma bar
                 <iframe src="https://openprocessing.org/sketch/685204/embed/" width="100%" height="600"></iframe>
             </div>
         </div>
+
+        <footer class="footer">
+
+        </footer>
     </body>
 </html>
