--- a/ProjetoInd_2/Code/index.html
+++ b/ProjetoInd_2/Code/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="styles.css">
     <title>Responsive Dashboard Design #1 | AsmrProg</title>
+    <!--
     <style>
         body {
             border-style: dashed;
@@ -55,7 +56,7 @@
             border-color:rgb(123, 2, 2); 
             border-width: 2px;
         }
-    </style>
+    </style> -->
 </head>
 <body>
     <div class="container-1">
@@ -65,8 +66,8 @@
             <div class="toggle">
 
                 <div class="logo">
-                    <img src="images/logo.png">
-                    <h2>Asmr<span class="danger">Prog</span></h2>
+                    <img src="images/lince-logo_S-fundo.png">
+                    <h2>Lince</h2>
                 </div>
 
                 <div class="close" id="close-btn" style="">
@@ -79,7 +80,7 @@
             <div class="sidebar" style="">
                 
 
-                <a href="#" >
+                <a href="#" class="active">
                     <span class="material-symbols-outlined">
                         dashboard
                     </span>
@@ -112,6 +113,7 @@
                         local_activity
                     </span>
                     <h3>Bilhete</h3>
+                    <span class="tickets-count">30</span>
                 </a>
 
                 <a href="#">
