Adição de estilos

--- a/Eric/login.html
+++ b/Eric/login.html
@@ -4,13 +4,14 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3Island</title>
+    <title>3Islands</title>
 </head>
 <body>
 
     <nav>
         <ul>
             <li><a href="#Atts">New Patch! v1.0</a></li>
+            <li><a href="registro.html">Registrar-se</a></li>
         </ul>
     </nav>
 
