--- a/Eric/registro.html
+++ b/Eric/registro.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-    <link rel="icon" href="Img/Micro_Receitas_Icon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="Styles/style_login.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>u.Receitas - Registro</title>
+    <title>3Islands</title>
 </head>
-
 <body>
-    <!--Cabeçalho → Titulo da Pagina-->
     <header>
-        <h1>Micro.Receitas</h1>
-        <p>O seu banco de projetos microcontrolados ;)</p>
+        <img src="3Islands.png" width="50%" height="auto" >
     </header>
 
     <nav>
         <ul>
-            <li><a href="principal.html">Home</a></li>
+            <li><a href="#Atts">New Patch! v1.0</a></li>
+            <li><a href="registro.html">Registrar-se</a></li>
         </ul>
     </nav>
 
@@ -29,6 +25,10 @@
             <!-- Nome completo -->
             <label for="nome">Nome Completo:</label><br>
             <input type="text" id="nome" name="nome" required placeholder="Digite seu nome completo"><br><br>
+
+            <!-- Nome completo -->
+            <label for="nick">Nickname:</label><br>
+            <input type="text" id="nick" name="nick" required placeholder="Digite seu nome no jogo"><br><br>
 
             <!-- Email -->
             <label for="email">Email:</label><br>
@@ -42,33 +42,6 @@
             <label for="confirmar_senha">Confirme a Senha:</label><br>
             <input type="password" id="confirmar_senha" name="confirmar_senha" required placeholder="Repita sua senha"><br><br>
 
-            <!-- Conhecimentos Adicionais -->
-            <h3>Conhecimentos Adicionais</h3>
-            <p>Selecione os conhecimentos que você possui:</p>
-
-            <input type="checkbox" id="programacao" name="conhecimentos[]" value="programacao">
-            <label for="programacao">Componentes</label><br>
-
-            <input type="checkbox" id="iot" name="conhecimentos[]" value="iot">
-            <label for="iot">Noções IoT</label><br>
-
-            <input type="checkbox" id="automacao" name="conhecimentos[]" value="automacao">
-            <label for="automacao">Softwares</label><br>
-
-            <input type="checkbox" id="robotica" name="conhecimentos[]" value="robotica">
-            <label for="robotica">Programação C</label><br>
-
-            <input type="checkbox" id="cloud" name="conhecimentos[]" value="cloud">
-            <label for="cloud">Computação em Nuvem</label><br>
-
-            <input type="checkbox" id="redes" name="conhecimentos[]" value="redes">
-            <label for="redes">Redes</label><br>
-
-            <!-- Sobre você -->
-            <p>
-                <label for="sobre_voce">Fale um pouco sobre você:</label><br>
-                <textarea id="sobre_voce" name="sobre_voce" rows="5" cols="50" placeholder="Compartilhe algo sobre sua experiência, interesses, etc."></textarea><br><br>
-
             <!-- Aceitar termos -->
             <input type="checkbox" id="termos" name="termos" required>
             <label for="termos">Aceito os <a href="#" style="color: blue">termos e condições</a></label><br><br>
@@ -77,8 +50,8 @@
         </form>
     </div>
 
-    <footer style="margin-top: 10%;">
-        <p style="text-align: center;">&copy; 2024 Eriquinho Enterprises. Todos os direitos reservados.</p>
+    <footer>
+        <p style="text-align: center;">&copy; SCOMB LTDA. Todos os direitos reservados.</p>
     </footer>
 
     <!-- Adicione o JavaScript aqui -->
