ALteração de pagina

--- a/Eric/registro.html
+++ b/Eric/registro.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3Islands</title>
 </head>
 <body>
     <header>
-        <img src="3Islands.png" width="50%" height="auto" >
+        <img src="style/3Islands.png" width="50%" height="auto">
     </header>
 
     <nav>
         <ul>
             <li><a href="#Atts">New Patch! v1.0</a></li>
-            <li><a href="registro.html">Registrar-se</a></li>
         </ul>
     </nav>
 
