--- a/Eric/login.html
+++ b/Eric/login.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3Islands</title>
 </head>
 <body>
-
+    <header>
+        <img src="style/3Islands.png" width="auto" height="100px">
+    </header>
     <nav>
-        <ul>
+        <ul style="text-align: center; margin-left: 5px;">
             <li><a href="#Atts">New Patch! v1.0</a></li>
             <li><a href="registro.html">Registrar-se</a></li>
         </ul>
@@ -29,6 +31,10 @@
             <input type="submit" value="Entrar">
         </form>
     </div>
+
+    <footer>
+        <p style="text-align: center;">&copy; SCOMB LTDA. Todos os direitos reservados.</p>
+    </footer>
 
 </body>
 </html>
