--- a/Eric/registro.html
+++ b/Eric/registro.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <img src="style/3Islands.png" width="50%" height="auto">
+        <img src="style/3Islands.png" width="auto" height="100px">
     </header>
 
     <nav>
         <ul>
-            <li><a href="#Atts">New Patch! v1.0</a></li>
+            <li style="text-align: center; margin-left: 5px;"><a href="#Atts">New Patch! v1.0</a></li>
         </ul>
     </nav>
 
