--- a/Eric/login.html
+++ b/Eric/login.html
@@ -11,9 +11,9 @@
         <img src="style/3Islands.png" width="auto" height="100px">
     </header>
     <nav>
-        <ul style="text-align: center; margin-left: 5px;">
-            <li><a href="#Atts">New Patch! v1.0</a></li>
-            <li><a href="registro.html">Registrar-se</a></li>
+        <ul>
+            <li style="text-align: center; margin-left: 5px;"><a href="#Atts">New Patch! v1.0</a></li>
+            <li style="text-align: center; margin-left: 5px;"><a href="registro.html">Registrar-se</a></li>
         </ul>
     </nav>
 
