Atualizações nos Projeto Individuais 2 e 3

--- a/ProjetoInd_3/01_home.html
+++ b/ProjetoInd_3/01_home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link de referência usado para acessar e inserir Icones do Google Fonts à página HTML-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="01_home_styles.css">
     <title>ESC - Dashboard</title>
     <!--
     <style>
@@ -211,7 +211,7 @@
                     <h3>Dashboard</h3>
                 </a>
 
-                <a href="#">
+                <a href="02_users_admin.html">
                     <span class="material-symbols-outlined">
                         group
                     </span>
@@ -476,7 +476,7 @@
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
-                        <img src="images/profile-1.jpg">
+                        <img src="images/Rafael.png">
                     </div>
                 </div>
             </div>
@@ -548,6 +548,6 @@
     </div>
 
     <script src="orders.js"></script>
-    <script src="index.js"></script>
+    <script src="01_index.js"></script>
 </body>
 </html>
