--- a/ProjetoInd_3/02_users_admin.html
+++ b/ProjetoInd_3/02_users_admin.html
@@ -38,8 +38,9 @@
         <aside>
             <div class="toggle">
                 <div class="logo">
-                    <img src="images/lince-logo_S-fundo.png">
-                    <h2>Lince</h2>
+                    <img id="LINCE-logo" src="images/LINCE-logo.png">
+                    <img id="LINCE-name" src="images/LINCE-whiteMode-S_ICTS.png">
+                    <!--<h2>Lince</h2>-->
                 </div>
 
                 <div class="close" id="close-btn">
@@ -52,12 +53,12 @@
             <div class="sidebar">
                 <a href="index.html">
                     <span class="material-symbols-outlined">
-                        dashboard
+                        info
                     </span>
-                    <h3>Dashboard</h3>
+                    <h3>Informações</h3>
                 </a>
 
-                <a href="#" class="active">
+                <a href="02_users_admin.html" class="active">
                     <span class="material-symbols-outlined">
                         group
                     </span>
@@ -78,23 +79,6 @@
                     <h3>Análises</h3>
                 </a>
 
-                <!--
-                <a href="#">
-                    <span class="material-symbols-outlined">
-                        local_activity
-                    </span>
-                    <h3>Bilhete</h3>
-                    <span class="tickets-count">30</span>
-                </a>
-                -->
-
-                <a href="#">
-                    <span class="material-symbols-outlined">
-                        inventory
-                    </span>
-                    <h3>Inventário</h3>
-                </a>
-
                 <a href="#">
                     <span class="material-symbols-outlined">
                         brightness_alert
@@ -102,14 +86,7 @@
                     <h3>Alertas</h3>
                 </a>
 
-                <a href="#">
-                    <span class="material-symbols-outlined">
-                        settings
-                    </span>
-                    <h3>Configurações</h3>
-                </a>
-
-                <a href="#">
+                <a href="06_login.html">
                     <span class="material-symbols-outlined">
                         login
                     </span>
@@ -124,6 +101,7 @@
                 </a>
             </div>
         </aside>
+
 
         <!-- Seção do Conteúdo Principal -->
         <main>
@@ -215,15 +193,18 @@
 
             <div class="user-profile">
                 <div class="logo">
-                    <img src="images/lince-logo_S-fundo.png">
+                    <img src="images/RAINCAT_SEMFUNDO.png">
+                    <p style="font-size: 18px; font-family: 'Montserrat', sans-serif; font-weight: bold">A system to avoid getting wet!</p>
+                    <!--
                     <h2>LINCE</h2>
                     <p>Liga De Inteligência Neuro-Computacional Na Engenharia</p>
+                    -->
                 </div>
             </div>
 
             <div class="reminders">
                 <div class="header">
-                    <h2>Reminders</h2>
+                    <h2>Alertas</h2>
                     <span class="material-symbols-outlined">
                         notifications
                     </span>
@@ -232,15 +213,15 @@
                 <div class="notification">
                     <div class="icon">
                         <span class="material-symbols-outlined">
-                            volume_up
+                            warning
                         </span>
                     </div>
                     <div class="content">
                         <div class="info">
-                            <h3>Workshop</h3>
-                            <small class="text_muted">
-                                08:00 AM - 12:00 PM
-                            </small>
+                            <h3>Timestamp</h3>
+                            <p style="font-size: 10px;" class="text_muted">
+                                2019-01-03 18:00:00
+                            </p>
                         </div>
                         <span class="material-symbols-outlined">
                             <b>more_vert</b>
@@ -251,15 +232,15 @@
                 <div class="notification deactive">
                     <div class="icon">
                         <span class="material-symbols-outlined">
-                            edit
+                            warning
                         </span>
                     </div>
                     <div class="content">
                         <div class="info">
-                            <h3>Workshop</h3>
-                            <small class="text_muted">
-                                08:00 AM - 12:00 PM
-                            </small>
+                            <h3>Timestamp</h3>
+                            <p style="font-size: 10px;" class="text_muted">
+                                2019-01-04 19:00:00
+                            </p>
                         </div>
                         <span class="material-symbols-outlined">
                             <b>more_vert</b>
@@ -272,7 +253,7 @@
                         <span class="material-symbols-outlined">
                             <b>add</b>
                         </span>
-                        <h3>Add Reminders</h3>
+                        <h3>Todos os alertas</h3>
                     </div>
                 </div>
             </div>
