--- a/ProjetoInd_3/04_analyse.html
+++ b/ProjetoInd_3/04_analyse.html
@@ -69,7 +69,7 @@
                     <h3>Alertas</h3>
                 </a>
 
-                <a href="#">
+                <a href="06_login.html">
                     <span class="material-symbols-outlined">
                         login
                     </span>
